--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,11 +46,11 @@ jobs:
       - name: Build with VitePress
         run: |
           npm run docs:build # 或 pnpm docs:build / yarn docs:build / bun run docs:build
-          touch /blog/.vitepress/dist/.nojekyll
+          touch /.vitepress/dist/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: /blog/.vitepress/dist
+          path: /.vitepress/dist
 
   # 部署工作
   deploy:
